# CodSpeedHQ-codspeed

./: .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  dist-workspace.toml
.claude-plugin/: plugin.json
.cursor-plugin/: plugin.json
.github/actions/install-bpf-deps/: action.yml
.github/actions/install-rust/: action.yml
.github/workflows/: audit.yml  ci.yml  release.yml
crates/exec-harness/: Cargo.toml
crates/instrument-hooks-bindings/: Cargo.toml
crates/instrument-hooks-bindings/src/: bindings.rs  lib.rs  update-bindings.sh
crates/memtrack/: AGENTS.md  Cargo.toml  build.rs
crates/memtrack/src/: ipc.rs  lib.rs  main.rs  session.rs
crates/memtrack/src/allocators/: mod.rs  static_linked.rs
crates/memtrack/src/ebpf/: attach_worker.rs  events.rs  memtrack.rs  mod.rs  poller.rs  proc_fs.rs  spawn.rs  tracker.rs
crates/memtrack/src/ebpf/c/: allocator.h  attach.h  event.h  main.bpf.c  memtrack.bpf.c
crates/memtrack/testdata/dlopen/: dlopen_alloc.c  fake_jemalloc.c  fake_mimalloc.c  thread_dlopen.c
crates/memtrack/testdata/spawn_wrapper/: Cargo.toml
crates/memtrack/tests/: cpp_tests.rs  dlopen_tests.rs  rust_tests.rs  shared.rs  spawn_tests.rs
crates/memtrack/tests/snapshots/: spawn_tests__spawn_on_demand_discovery.snap  spawn_tests__spawn_with_discovery.snap  spawn_tests__spawn_without_discovery.snap
crates/runner-shared/: Cargo.toml
crates/runner-shared/benches/: memtrack_writer.rs
crates/runner-shared/src/: fifo.rs  unwind_data.rs
crates/runner-shared/src/artifacts/memtrack/: mod.rs  pipeline.rs  writer.rs
docs/: architecture.md
schemas/: codspeed.schema.json
scripts/: samply-dev.sh
skills/codspeed-optimize/: SKILL.md
skills/codspeed-setup-harness/: SKILL.md
skills/optimize/: SKILL.md
src/: api_client.rs  binary_pins.rs  lib.rs  local_logger.rs  main.rs  request_client.rs
src/binary_installer/: mod.rs
src/cli/: auth.rs  experimental.rs  mod.rs  samply.rs  setup.rs  shared.rs  status.rs  update.rs
src/cli/exec/: mod.rs  multi_targets.rs
src/cli/run/: mod.rs
src/cli/run/helpers/: benchmark_display.rs  download_file.rs  find_repository_root.rs  mod.rs  parse_git_remote.rs
src/executor/: config.rs  execution_context.rs  interfaces.rs  mod.rs  orchestrator.rs  tests.rs
src/executor/helpers/: apt.rs  command.rs  env.rs  homebrew.rs  mod.rs  profile_folder.rs  run_with_env.rs
src/executor/memory/: executor.rs  mod.rs  setup.rs
src/executor/shared/: fifo.rs
src/executor/valgrind/: executor.rs  measure.rs  setup.rs
src/executor/wall_time/: executor.rs
src/executor/wall_time/perf/: mod.rs  setup.rs
src/executor/wall_time/profiler/: mod.rs
src/instruments/: mongo_tracer.rs
src/local_logger/: icons.rs  mod.rs
src/local_logger/rolling_buffer/: mod.rs
src/local_logger/snapshots/: codspeed_runner__local_logger__icons__tests__icon_rendering.snap
src/project_config/: discover.rs  interfaces.rs  merger.rs  mod.rs  tests.rs
src/queries/: CompareRuns.gql  CurrentUser.gql  FetchLocalRun.gql  GetRepository.gql
src/run_environment/: interfaces.rs  mod.rs  provider.rs
src/run_environment/buildkite/: provider.rs
src/run_environment/buildkite/snapshots/: codspeed_runner__run_environment__buildkite__provider__tests__pull_request_run_environment_metadata.snap
src/run_environment/github_actions/: provider.rs
src/run_environment/github_actions/snapshots/: codspeed_runner__run_environment__github_actions__provider__tests__fork_pull_request_run_environment_metadata.snap  codspeed_runner__run_environment__github_actions__provider__tests__matrix_job_run_environment_metadata.snap
src/run_environment/gitlab_ci/: logger.rs  provider.rs
src/run_environment/gitlab_ci/snapshots/: codspeed_runner__run_environment__gitlab_ci__provider__tests__fork_merge_request_run_environment_metadata.snap  codspeed_runner__run_environment__gitlab_ci__provider__tests__merge_request_run_environment_metadata.snap  codspeed_runner__run_environment__gitlab_ci__provider__tests__push_main_run_environment_metadata.snap
src/run_environment/local/: provider.rs
src/run_environment/local/snapshots/: codspeed_runner__run_environment__local__provider__tests__github_run_environment_metadata.snap  codspeed_runner__run_environment__local__provider__tests__new_with_github_remote_found_on_codspeed.snap  codspeed_runner__run_environment__local__provider__tests__new_with_github_remote_not_found_on_codspeed.snap  codspeed_runner__run_environment__local__provider__tests__new_without_git_repository-2.snap
src/system/: check.rs  info.rs  mod.rs  os.rs
src/upload/: benchmark_display.rs  interfaces.rs  mod.rs  poll_results.rs  polling.rs  upload_metadata.rs  uploader.rs
src/upload/snapshots/: codspeed_runner__upload__benchmark_display__tests__benchmark_table_formatting.snap  codspeed_runner__upload__upload_metadata__tests__get_local_metadata_hash-2.snap  codspeed_runner__upload__upload_metadata__tests__get_metadata_hash-2.snap
testdata/perf_map/: cpp_my_benchmark.debug  libc.so.6  libc.so.6.debug
tests/: working_directory.rs
(+12 files in other folders)
