[package]
name = "codspeed-runner"
version = "4.17.1"
edition = "2024"
repository = "https://github.com/CodSpeedHQ/codspeed"
publish = false
default-run = "codspeed"

[[bin]]
name = "codspeed"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["env", "color"] }
itertools = { workspace = true }
log = { workspace = true }
rand = "0.10"
rayon = "1.12"
regex = "1.12.3"
semver = "1.0"
reqwest = { version = "0.12", features = ["json", "stream", "native-tls-vendored"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
url = "2.5.8"
sha256 = "1.6"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-tar = { package = "astral-tokio-tar", version = "0.6.2" }
tokio-util = "0.7.18"
md5 = "0.8"
base64 = "0.22.1"
async-compression = { version = "0.4.42", features = ["tokio", "gzip"] }
schemars = "1.2.1"
simplelog = { version = "0.12.2", default-features = false, features = ["termcolor"] }
tempfile = { workspace = true }
git2 = "0.21"
nestify = "0.3.3"
gql_client = { git = "https://github.com/CodSpeedHQ/gql-client-rs", rev = "617a889e1d9089b5aa36679f1a5aa13ad01993ae" }
serde_yaml = "0.9.34"
sysinfo = { version = "0.37", features = ["serde"] }
indicatif = "0.18"
console = "0.16"
async-trait = "0.1.89"
libc = { workspace = true }
bincode = "1.3.3" # Pinned to 1.x: 2.0 changes the wire format and serde integration
object = "0.39"
linux-perf-data = { git = "https://github.com/mstange/linux-perf-data.git", rev = "da5bce4b9fb724e84b1eea0cb6ab9c8a291bc676", features = [
  "zstd",
] } # unreleased main as of 2026-03-19
debugid = "0.8.0"
memmap2 = "0.9.10"
nix = { version = "0.31.3", features = ["fs", "time", "user"] }
futures = "0.3.32"
runner-shared = { path = "crates/runner-shared" }
memtrack = { path = "crates/memtrack", default-features = false }
exec-harness = { path = "crates/exec-harness" }
instrument-hooks-bindings = { path = "crates/instrument-hooks-bindings" }
ipc-channel = { workspace = true }
shellexpand = { version = "3.1.2", features = ["tilde"] }
addr2line = "0.26"
gimli = "0.33"
open = "5.3.5"
axoupdater = { version = "0.10.0", features = ["github_releases"] }
tabled = { version = "0.20.0", features = ["ansi"] }
shell-words = "1.1.1"
rmp-serde = "1.3.1"
uuid = { version = "1.23.1", features = ["v4"] }
which = "8.0.2"
crc32fast = "1.5.0"
samply = { git = "https://github.com/CodSpeedHQ/samply-codspeed", rev = "e8b8dacc042978953a6db9616c72846f7b8d5062" }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18"

[dev-dependencies]
temp-env = { version = "0.3.6", features = ["async_closure"] }
insta = { workspace = true, features = ["json", "redactions"] }
test-log = { workspace = true }
test-with = { workspace = true }
rstest = { workspace = true }
rstest_reuse = "0.7.0"
shell-quote = "0.7.2"
assert_cmd = "2.2"
predicates = "3.1.4"
strum = { version = "0.28.0", features = ["derive"] }

[workspace]
members = [
  "crates/runner-shared",
  "crates/memtrack",
  "crates/exec-harness",
  "crates/instrument-hooks-bindings",
]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive", "env"] }
libc = "0.2"
log = "0.4.28"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
ipc-channel = "0.20"
itertools = "0.14.0"
env_logger = "0.11.10"
tempfile = "3.27.0"
object = { version = "0.39", default-features = false, features = ["read_core", "elf"] }
insta = { version = "1.47", default-features = false }
rstest = { version = "0.26", default-features = false }
test-log = "0.2.20"
test-with = { version = "0.16", default-features = false, features = [] }

[workspace.metadata.release]
sign-tag = true
sign-commit = true
shared-version = false
consolidate-commits = false
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}} 🎉"

[package.metadata.release]
pre-release-hook = ["./scripts/pre-release.sh", "v{{version}}"]

[profile.dist]
inherits = "release"
lto = "thin"
strip = true

[package.metadata.dist]
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-musl", "x86_64-unknown-linux-musl"]
binaries.aarch64-apple-darwin = ["codspeed"]
binaries.aarch64-unknown-linux-musl = ["codspeed"]
binaries.x86_64-unknown-linux-musl = ["codspeed"]
